--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,22 @@ nav {
 .logo-name {
 	display: flex;
 	align-items: center;
+	gap: 1rem;
 }
 
 .logo {
-	height: 7rem;
+	height: 6rem;
+}
+
+.name {
+	font-size: 4rem;
+}
+
+main {
+	height: 90vh;
+	background-image: url(src/assets/images/background.png);
+	background-size: cover;
+	background-position: left bottom;
 }
 
 footer {
@@ -36,11 +48,11 @@ footer {
 	align-items: center;
 	gap: 0.7rem;
 	font-family: 'Creepster';
-	background-color: #314189;
+	/* background-color: #314189; */
 	font-size: 1.8rem;
 	color: #eff9fe;
 	text-align: center;
-	padding: 1.5rem;
+	padding: 1rem;
 
 	img {
 		height: 1.6rem;
