--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 body {
 	display: flex;
 	flex-direction: column;
+	width: 100%;
 }
 
 nav {
@@ -13,7 +14,6 @@ nav {
 	background-color: #314189;
 	color: #eff9fe;
 	height: 10vh;
-	width: 100vw;
 	padding: 1em 20rem;
 }
 
@@ -32,10 +32,34 @@ nav {
 }
 
 main {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
 	height: 90vh;
+	width: 100vw;
 	background-image: url(src/assets/images/background.png);
 	background-size: cover;
 	background-position: left bottom;
+	padding: 10rem;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	place-self: center;
+	gap: 1rem;
+	color: #eff9fe;
+	font-size: 1.2rem;
+	font-weight: bold;
+	font-family: 'Creepster';
+	background-color: black;
+	margin: 1rem;
+	text-align: center;
+	width: 20rem;
+}
+
+.card img {
+	width: 100%;
 }
 
 footer {
@@ -56,5 +80,40 @@ footer {
 
 	img {
 		height: 1.6rem;
+	}
+}
+
+@media screen and (max-width: 1250px) {
+	.card {
+		width: 15rem;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	nav {
+		flex-direction: column;
+		padding: 1rem;
+		height: 15vh;
+	}
+	main {
+		height: auto;
+		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+	}
+	.card {
+		width: 15rem;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	main {
+		height: auto;
+		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		padding: 0;
+		padding-bottom: 3rem;
+	}
+	.card {
+		width: 10rem;
 	}
 }
