--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ main {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
 	height: 90vh;
-	background-image: url(src/assets/images/background.png);
+	background-image: url(public/background.png);
 	background-size: cover;
 	background-position: left bottom;
 	padding: 10rem;
